--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     @RenderSection("styles",required: false)
 </head>
 <body>
-    <div class="well off-to-left">
+    <div class="off-to-left">
         <h3>jefware</h3>
     </div>
     @RenderBody()
