--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="homeApp">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -10,7 +10,7 @@
     @RenderSection("styles",required: false)
 </head>
 <body>
-    <div class="off-to-left">
+    <div class="container-fluid off-to-left">
         <h3>jefware</h3>
     </div>
     @RenderBody()
